# lakeflow_jobs_meta

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: lint.yml  publish-test.yml  publish.yml  tests.yml
docs/: METADATA_MANAGEMENT.md  PACKAGING_AND_DEPLOYMENT.md
examples/: metadata_examples.yaml  orchestrator_example.ipynb  orchestrator_example.py  orchestrator_example_local.ipynb
examples/notebook_task/: sample_ingestion_notebook.ipynb
examples/sql_file_task/: 02_daily_aggregations.sql  03_bronze_to_silver_transformation.sql  04_data_freshness_check.sql  05_incremental_load.sql
examples/sql_query_task/: 01_data_quality_check.sql
lakeflow_job_meta/: __init__.py  constants.py  main.py  metadata_manager.py  monitor.py  orchestrator.py  task_builders.py  utils.py
lakeflow_jobs_meta/: __init__.py  metadata_manager.py  orchestrator.py  task_builders.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_constants.py  test_metadata_manager.py  test_monitor.py  test_orchestrator.py  test_task_builders.py  test_utils.py
